--- a/images/index.html
+++ b/images/index.html
@@ -11,33 +11,57 @@
   <h1>CodeSpace Cat's Portfolio 🎨</h1>
   <nav>
     <!-- Navigation Menu -->
+     <ul>
+      <li> About Me </li>
+      <li> Skills </li>
+      <li> Portfolio </li>
+      <li> Contact </li>
+     </ul>
   </nav>
 </header>
 
 <!-- About Me Section -->
-<section id="">
-  <img src="https://i.imgur.com/mATtpfi.png" alt="My Profile Picture">
+<section id="About Me">
+  <h2>About Me</h2>
+  <img src="cat-codespace.png" alt="My Profile Picture">
+  <p>Hello, I'm <b>Codespace Cat</b>. I'm purr-sionate about web development and design. 
+    I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
+    and I adore crafting pawsitively intuitive, whisker-twitching and fur-tastic web experiences. 
+    Whoa that's a lot of puns.</p>
 </section>
 
 <!-- Skills Section -->
-<section id="">
+<section id="Skills">
+  <h2>My Skills</h2>
+  <ul>
+    <li>Web Developmement</li>
+    <li>UI/UX Design</li>
+    <li>Backend Development</li>
+    <li>Database Management</li>
+    <li>SEO Optimisation</li>
+    <li>Lying in the Sun</li>
+  </ul>
 </section>
 
 <!-- Portfolio Section -->
-<section id="">
+<section id="Portfolio">
   <h2>Catfolio</h2>
   <table>
     <thead>
+      <th>Project Name</th>
+      <th>Date</th>
+      <th>Description</th>
+      <th>Thumbnail</th>
     </thead>
-    <td><img src="https://i.imgur.com/eLykdqE.png" alt="Thumbnail for Purrfect Landing Page">
-    <td><img src="https://i.imgur.com/Fb2eueT.png" alt="Thumbnail for Kitty Commerce">
-    <td><img src="https://i.imgur.com/t1PwXIx.png" alt="Thumbnail for CatChat Social">
+    <td><img src="1.png" alt="Thumbnail for Purrfect Landing Page">
+    <td><img src="2.png" alt="Thumbnail for Kitty Commerce">
+    <td><img src="3.png" alt="Thumbnail for CatChat Social">
 
   </table>
 </section>
 
 <!-- Contact Section -->
-<section id="">  
+<section id="Contact">  
 </section>
 
 <!-- Footer -->
