--- a/images/index.html
+++ b/images/index.html
@@ -12,10 +12,10 @@
   <nav>
     <!-- Navigation Menu -->
      <ul>
-      <li> About Me </li>
-      <li> Skills </li>
-      <li> Portfolio </li>
-      <li> Contact </li>
+      <li> <a href="#About Me">About Me </a></li>
+      <li> <a href="#Skills">Skills </a></li>
+      <li> <a href="#Portfolio">Portfolio </a></li>
+      <li> <a href="#Contact">Contact </a></li>
      </ul>
   </nav>
 </header>
@@ -86,6 +86,7 @@
   <input type="text" id="email" name="email">
   <label for="message">Message:</label>
   <input type="text" id="message" name="message">
+  <input type="submit" value="Submit">
   </form>
 </section>
 
