--- a/images/index.html
+++ b/images/index.html
@@ -12,34 +12,34 @@
   <nav>
     <!-- Navigation Menu -->
      <ul>
-      <li> <a href="#About Me">About Me </a></li>
-      <li> <a href="#Skills">Skills </a></li>
-      <li> <a href="#Portfolio">Portfolio </a></li>
-      <li> <a href="#Contact">Contact </a></li>
+      <li> <a href="#About Me">About Me 👋</a></li>
+      <li> <a href="#Skills">Skills 🔨</a></li>
+      <li> <a href="#Portfolio">Portfolio 📸 </a></li>
+      <li> <a href="#Contact">Contact 🤙 </a></li>
      </ul>
   </nav>
 </header>
 
 <!-- About Me Section -->
 <section id="About Me">
-  <h2>About Me</h2>
+  <h2>About Me 😺</h2>
   <img src="cat-codespace.png" alt="My Profile Picture">
   <p>Hello, I'm <b>Codespace Cat</b>. I'm purr-sionate about web development and design. 
     I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
     and I adore crafting pawsitively intuitive, whisker-twitching and fur-tastic web experiences. 
-    Whoa that's a lot of puns.</p>
+    Whoa that's a lot of puns. 🐾</p>
 </section>
 
 <!-- Skills Section -->
 <section id="Skills">
-  <h2>My Skills</h2>
+  <h2>My Skills 🤹</h2>
   <ul>
-    <li>Web Developmement</li>
-    <li>UI/UX Design</li>
-    <li>Backend Development</li>
-    <li>Database Management</li>
-    <li>SEO Optimisation</li>
-    <li>Lying in the Sun</li>
+    <li>Web Developmement 🕸️</li>
+    <li>UI/UX Design 🎨</li>
+    <li>Backend Development 🧱</li>
+    <li>Database Management 💻</li>
+    <li>SEO Optimisation 🔎</li>
+    <li>Lying in the Sun 🌞</li>
   </ul>
 </section>
 
@@ -81,7 +81,7 @@
 <section id="Contact">  
   <form>
   <label for="fullname">Name:</label>
-  <input type="text" id="fname" name="fullname">
+  <input type="text" id="fullname" name="fullname">
   <label for="email">Email:</label>
   <input type="text" id="email" name="email">
   <label for="message">Message:</label>
@@ -92,6 +92,7 @@
 
 <!-- Footer -->
 <footer>
+  <p> © 2024 Codespace Cat. All rights reserved</p>
 </footer>
 <body>
     
